Fix css regression on mobile devices.

--- a/css/campmap.css
+++ b/css/campmap.css
@@ -16,7 +16,6 @@ html, body {
   right: 0;
   top: 0;
   left: 0;
-  margin: 0;
   padding: 0;
 }
 
